Fix Home page formatting on mobile

--- a/_sass/_brief-us.scss
+++ b/_sass/_brief-us.scss
@@ -64,7 +64,6 @@
 #ast-checkbox > div:nth-of-type(2),
 #ast-checkbox > div:nth-of-type(3) {
   border-right: 1px solid #e1e1e1;
-  margin-right: -1px;
 }
 #ast-checkbox label, #ast-checkbox label span {
   display: block;
@@ -209,8 +208,13 @@
   #brief-form .av_one_half {width: 100%;}
   #brief-form .av_one_half.second {margin-left: 0;}
   .no_margin.av_one_fourth {width: 50%;}
+  #ast-checkbox > div:nth-of-type(2) {
+    border-right: none;
+  }
   #ast-checkbox > div:nth-of-type(3),
-  #ast-checkbox > div:nth-of-type(4) {border-top: 1px solid #e1e1e1;}
+  #ast-checkbox > div:nth-of-type(4) {
+    border-top: 1px solid #e1e1e1;
+  }
   #ast-checkbox label {
     padding-top: 20px;
     padding-bottom: 10px;
